# test_kingbase_dci_vs2008

./: .gitignore  CMakeLists.txt  test_dci.cc  test_qt_odbc.cc
dcitest/: DciTest.cpp  DciTest.h  Makefile  Makefile.AIX  Makefile.AIX.oci  Makefile.nci  Makefile.oci  blob_in  clob1_in.txt  clob2_in.txt  clob2_in_gb2312.txt  connect.cpp  connect.h  dcimisc.cpp  dcimisc.h  errcode.cpp  errcode.h  expected.txt  package.cpp  package.h  test-run.sh  testDirpath.cpp  testDirpath.h  testDocCases.cpp  testDocCases.h  testHandleType.cpp  testHandleType.h  testLob.cpp  testLob.h  testLob_linux.cpp  testNumber.cpp  testNumber.h  testPiece.cpp  testPiece.h  testUTF16.cpp  testUTF16.h
v8r6_dci_win/include/: dci.h  dciapi.h  dcidef.h  dcitypes.h
v8r6_dci_win/lib_x64/: dcikdb.lib  libpq.lib
v8r6_dci_win/lib_x86/: dcikdb.lib  libpq.lib
